<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:src="@drawable/iwak_logo"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_label"
        android:textColor="@color/textColorDark"
        android:textSize="@dimen/text_large"/>

    <LinearLayout
        android:id="@+id/layout_et_email"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="53dp"
        android:background="@drawable/rounded_rectangle_white"
        android:paddingLeft="19dp"
        android:paddingRight="19dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/colorTransparent"
            android:hint="@string/login_hint_email"
            android:textColor="@color/textColorDark"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_small"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_et_password"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/rounded_rectangle_white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/login_hint_password"
            android:background="@color/colorTransparent"
            android:inputType="textPassword"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/text_small" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/login_lupa_password"
        android:textSize="@dimen/text_small"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:background="@drawable/rounded_rectangle_darkskyblue"
        android:text="@string/login_button"
        android:textSize="@dimen/text_large"
        android:textColor="@color/colorWhite"/>

</LinearLayout>