<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:paddingBottom="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_circleCheck_jumlahPakan"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/circle_unchecked" />

        <TextView
            android:id="@+id/tv_todo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Beri Pakan-1 200 gr"
            android:textColor="@color/textColorSoftDark"
            android:textSize="@dimen/text_small"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="31dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/keterangan_beri_pakan"
            android:textSize="@dimen/text_smallest"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_rectangle_white"
            android:paddingLeft="19dp">

            <EditText
                android:id="@+id/et_laporanHarian_input_jumlahPakan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:hint="200"
                android:inputType="numberDecimal"
                android:textColor="@color/textColorDark"
                android:textColorHint="@color/textColorHint"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tv_satuan_berat"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:text="@string/sampling_ikan_satuan_berat"
                android:textColor="@color/textColorDark"
                android:textSize="@dimen/text_small" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_harian1_simpan_jumlahPakan"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/rounded_rectangle_darkskyblue"
            android:text="@string/laporan_pakan_button_simpan"
            android:textAllCaps="false"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_large" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorCloudyBlue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_circleCheck_kematian"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/circle_unchecked" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Catat Kematian Ikan"
            android:textColor="@color/textColorSoftDark"
            android:textSize="@dimen/text_small"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="31dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rect_berat_sampling"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_rectangle_white"
            android:paddingLeft="19dp">

            <EditText
                android:id="@+id/et_laporanHarian_input_jumlahKematian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:hint="Jumlah ikan"
                android:inputType="numberDecimal"
                android:textColor="@color/textColorDark"
                android:textColorHint="@color/textColorHint"
                android:textSize="@dimen/text_small" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:text="@string/sampling_ikan_satuan_jumlah"
                android:textColor="@color/textColorDark"
                android:textSize="@dimen/text_small"
                android:id="@+id/textView" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_simpan_jumlahKematian"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/rounded_rectangle_darkskyblue"
            android:text="@string/laporan_pakan_button_simpan"
            android:textAllCaps="false"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_large" />
    </LinearLayout>

</LinearLayout>
