<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_subitem_datakolam_label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jumlah Pakan"
        android:textColor="@color/textColorSoftDark"
        android:textSize="@dimen/text_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_datakolam_jumlahpakan_kg"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="99999"
                android:textColor="@color/textColorDark"
                android:textSize="@dimen/text_largest" />

            <TextView
                android:id="@+id/tv_datakolam_label_Satuan_Kg"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/sampling_ikan_satuan_berat2"
                android:textColor="@color/textColorSoftDark"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorCloudyBlue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_datakolam_jumlahpakan_sak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="9999"
                android:textColor="@color/textColorDark"
                android:textSize="@dimen/text_largest" />

            <TextView
                android:id="@+id/tv_satuan_data_sak"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/sampling_ikan_satuan_berat_konversi"
                android:textColor="@color/textColorSoftDark"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="11dp"
        android:background="@color/colorCloudyBlue" />

    <TextView
        android:id="@+id/tv_subItem_dataKolam_label2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jumlah Kematian"
        android:textColor="@color/textColorSoftDark"
        android:textSize="@dimen/text_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dataKolam_jumlahKematian"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="99999"
                android:textColor="@color/textColorDark"
                android:textSize="@dimen/text_largest" />

            <TextView
                android:id="@+id/tv_satuan_jumlahKematian"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/sampling_ikan_satuan_jumlah"
                android:textColor="@color/textColorSoftDark"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/textColorDark"
                android:textSize="48sp" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="@color/textColorSoftDark"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>